# Applender

./: CMakeLists.txt  GNUmakefile  README.md
.github/: README.md
build_files/build_environment/: CMakeLists.txt
build_files/build_environment/cmake/: ffmpeg.cmake  occt.cmake  versions.cmake
build_files/cmake/: packaging.cmake  testing.cmake
build_files/cmake/Modules/: FindEmbree.cmake
build_files/cmake/config/: blender_developer.cmake  blender_full.cmake  blender_headless.cmake  blender_lite.cmake  blender_release.cmake  bpy_module.cmake
build_files/cmake/platform/: dependency_targets.cmake  platform_apple.cmake
intern/: CMakeLists.txt
intern/atomic/: CMakeLists.txt  atomic_ops.h
intern/clog/: clog.cc
intern/cycles/: CMakeLists.txt
intern/cycles/app/: CMakeLists.txt
intern/cycles/blender/: CMakeLists.txt  device.cpp  python.cpp
intern/cycles/blender/addon/: engine.py  properties.py  ui.py  version_update.py
intern/cycles/bvh/: CMakeLists.txt  bvh.cpp
intern/cycles/cmake/: external_libs.cmake  macros.cmake
intern/cycles/device/: CMakeLists.txt  denoise.cpp  denoise.h  device.cpp  device.h  kernel.cpp  kernel.h  memory.h  queue.h
intern/cycles/device/cpu/: device_impl.cpp  device_impl.h
intern/cycles/device/metal/: device_impl.h  device_impl.mm  kernel.mm  queue.mm  util.h  util.mm
intern/cycles/device/multi/: device.cpp
intern/cycles/hydra/: display_driver.cpp  display_driver.h  render_delegate.cpp
intern/cycles/integrator/: CMakeLists.txt  denoiser.cpp  denoiser.h  denoiser_gpu.cpp  denoiser_oidn_gpu.cpp  path_trace.cpp  path_trace_work_gpu.cpp
intern/cycles/kernel/: CMakeLists.txt  data_template.h  features.h  types.h
intern/cycles/kernel/bvh/: bvh.h  intersect_filter.h  nodes.h
intern/cycles/kernel/closure/: bsdf.h
intern/cycles/kernel/device/cpu/: bvh.h
intern/cycles/kernel/device/gpu/: kernel.h  parallel_active_index.h  parallel_sorted_index.h
intern/cycles/kernel/device/metal/: bvh.h  compat.h
intern/cycles/kernel/geom/: motion_triangle_intersect.h  shader_data.h  triangle_intersect.h
intern/cycles/kernel/integrator/: shade_volume.h  surface_shader.h
intern/cycles/kernel/osl/: camera.h  globals.h  osl.h  services.cpp  services_gpu.h
intern/cycles/kernel/svm/: ao.h  bevel.h  closure.h  raycast.h
intern/cycles/kernel/util/: image_3d.h
intern/cycles/scene/: geometry.cpp  geometry_bvh.cpp  integrator.cpp  object.cpp  osl.cpp  shader.h
intern/cycles/session/: display_driver.cpp  session.cpp
intern/cycles/subd/: osd.h
intern/cycles/util/: CMakeLists.txt  aligned_malloc.cpp  atomic.h  concurrent_set.h  concurrent_vector.h  debug.cpp  debug.h  defines.h  guarded_allocator.h  half.h  log.cpp  math_base.h  math_fast.h  math_float3.h  math_float4.h  math_int4.h  murmurhash.cpp  optimization.h  path.cpp  set.h  simd.h  string.cpp  string.h  system.cpp  task.cpp  task.h  tbb.h  thread.cpp  thread.h  time.cpp  types_base.h  types_float3.h  types_float4.h  types_int3.h  types_uint3.h
intern/ghost/: CMakeLists.txt  GHOST_Types.hh
intern/ghost/intern/: GHOST_Context.cc  GHOST_Context.hh  GHOST_ISystem.cc  GHOST_ISystemPaths.cc  GHOST_IXrGraphicsBinding.hh  GHOST_SystemCocoa.hh  GHOST_SystemCocoa.mm  GHOST_SystemHeadless.hh  GHOST_WindowCocoa.mm  GHOST_WindowViewCocoa.hh  GHOST_XrContext.cc  GHOST_XrGraphicsBinding.cc  GHOST_Xr_openxr_includes.hh
intern/guardedalloc/: CMakeLists.txt  MEM_guardedalloc.h
intern/guardedalloc/intern/: mallocn.cc  mallocn_guarded_impl.cc  mallocn_inline.hh  mallocn_intern.hh
intern/libmv/intern/: utildefines.h
intern/libmv/libmv/base/: aligned_malloc.cc
intern/libmv/libmv/numeric/: numeric.h
intern/libmv/libmv/simple_pipeline/: modal_solver.cc  pipeline.cc
intern/mcp/: CMakeLists.txt  MCP_client.hh
intern/mcp/intern/: MCP_client.cc
intern/occt_bridge/: CMakeLists.txt  OCCT_bridge.hh
intern/occt_bridge/intern/: OCCT_bridge.cc
intern/opensubdiv/: CMakeLists.txt  opensubdiv_evaluator.hh  opensubdiv_topology_refiner.hh
intern/opensubdiv/internal/base/: opensubdiv_capi.cc  type_convert.cc  type_convert.h
intern/opensubdiv/internal/evaluator/: evaluator_impl.cc  gpu_compute_evaluator.cc  gpu_vertex_buffer_wrapper.hh
intern/opensubdiv/internal/topology/: topology_refiner_factory.cc
release/datafiles/: blender_icons_geom_update.py
release/text/: readme.html
scripts/modules/bpy/: __init__.py
scripts/startup/bl_operators/: __init__.py  mcp.py
scripts/startup/bl_ui/: space_toolsystem_toolbar.py  space_topbar.py  space_view3d.py
source/blender/: CMakeLists.txt
source/blender/blendthumb/: CMakeLists.txt
source/blender/blendthumb/src/: thumbnail_provider.mm
source/blender/blenfont/: CMakeLists.txt
source/blender/blenkernel/: CMakeLists.txt
source/blender/blenlib/: BLI_bit_span_to_index_ranges.hh  BLI_fft.hh  BLI_fileops.hh  BLI_fileops_types.hh  BLI_filereader.hh  BLI_fnmatch.hh  BLI_math_interp.hh  BLI_path_utils.hh  BLI_simd.hh  BLI_system.hh  BLI_threads.hh  CMakeLists.txt
source/blender/blentranslation/msgfmt/: CMakeLists.txt  msgfmt.cc
source/blender/draw/: CMakeLists.txt
source/blender/editors/: CMakeLists.txt
source/blender/gpu/: CMakeLists.txt  GPU_common.hh
source/blender/imbuf/: CMakeLists.txt
source/blender/python/: CMakeLists.txt
source/creator/: CMakeLists.txt  creator.cc  creator_args.cc  creator_signals.cc
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt  mcp_jsonrpc_test.py
(+196 files in other folders)
